# Topics

./: .gitignore  Cargo.toml  Database Design.md  Topic_HTLD.excalidraw.md  docker-compmose.yml  docker-compose.yml  prometheus.yml
common/: Cargo.toml  Readme.md
common/apps/: Cargo.toml
common/ids/: Cargo.toml
common/routing/: Cargo.toml
common/routing/src/: error.rs  lib.rs  list_criteria.rs  metrics.rs  pagination.rs  router.rs  stream.rs
common/routing/src/auth/: claims.rs  mod.rs  oauth.rs  roles.rs  token.rs  user.rs
diff_service/: Cargo.toml
diff_service/src/: main.rs
docker/keycloak/: realm-export.json
engine/: Cargo.toml
engine/src/: app.rs  error.rs  id.rs  lib.rs  list_criteria.rs  pagination.rs  search_criteria.rs  search_filters.rs  stream.rs
engine/src/models/: entity.rs  identifier.rs  topic.rs  topic_set.rs
engine/src/repository/: entities.rs  mod.rs  sets.rs  topics.rs
entity-service/: Cargo.toml
entity-service/src/: error.rs  lib.rs  model.rs  repository.rs  service.rs  state.rs
entity-service/src/routes/: mod.rs
postgres-repository/: Cargo.toml
postgres-repository/src/: lib.rs
postgres_repository/: Cargo.toml
postgres_repository/src/: connection.rs  lib.rs  migration.rs
postgres_repository/src/migrations/: V1_0_0__create_topics_table.sql
repositories/: Cargo.toml
repositories/src/: lib.rs
repositories/src/mongodb/: mod.rs  topics.rs
repositories/src/postgres/: connection.rs  initializer.rs  insert_many.rs  migration.rs  mod.rs  sets.rs  statements.rs  topic_test_repos.rs  topics.rs
repositories/src/postgres/migrations/: V1__create_topics_table.sql  V1__topics_table.sql  V2__create_sets_table.sql  V2__sets_table.sql  V3__create_entities_table.sql
repositories/src/postgres/migrations/topics/: V1__topics_table.sql
repositories/src/postgres/tests/: mod.rs  topics.rs
repositories/src/postgres/topic_test_repos/: tests.rs
repositories/tests/: mod.rs  sets.rs  topics.rs
repositories/tests/postgres/: mod.rs  topics.rs
repository/src/: lib.rs
scripts/: keycloak.py
set-service/: Cargo.toml
set-service/src/: error.rs  lib.rs  main.rs  model.rs  repository.rs  service.rs  state.rs
set-service/src/routes/: mod.rs
sets/: Cargo.toml
sets-core/: Cargo.toml
sets-core/src/: lib.rs  list_filter.rs  model.rs  result.rs
sets/sets-core/: Cargo.toml
sets/sets-core/src/: lib.rs  list_filter.rs  result.rs
topic-service/: Cargo.toml
topic-service/src/: error.rs  filter.rs  lib.rs  main.rs  model.rs  repository.rs  service.rs  state.rs
topic-service/src/routes/: mod.rs
topic-service/tests/: integration_tests.rs
topic_core/: Cargo.toml
topic_core/src/: lib.rs  pagination.rs  topic.rs
topic_core/src/v1/: entity.rs  entity_identifier.rs  mod.rs
topic_routes/: Cargo.toml
topic_routes/src/: error.rs  lib.rs
topic_routes/src/app/: mod.rs  state.rs
topic_routes/src/app/routes/: mod.rs  response.rs
topic_routes/src/app/routes/v1/: identifiers.rs  mod.rs  sets.rs  topics.rs
topic_routes/src/app/services/: entities.rs  mod.rs  sets.rs  topics.rs
topic_routes/src/app/tests/: mod.rs
topic_routes/src/app/tests/v1/: mod.rs  set_endpoints.rs  topic_endpoints.rs
topic_service/: Cargo.toml
topic_service/src/: error.rs  logging.rs  main.rs
topic_service/src/app/: mod.rs  pagination.rs  search_filter.rs  state.rs
topic_service/src/app/models/: entity.rs  entity_identifier.rs  identifier.rs  mod.rs  topic.rs  topic_set.rs
topic_service/src/app/repository/: file.rs  mod.rs
topic_service/src/app/routes/: mod.rs
topic_service/src/app/routes/v1/: entities.rs  entity_identifiers.rs  identifiers.rs  mod.rs  sets.rs  topic_sets.rs  topics.rs
topic_service/src/app/services/: mod.rs  sets.rs  topics.rs
topic_service/src/app/tests/: mod.rs  topic_endpoints.rs
topic_service/src/app/tests/v1/: mod.rs  set_endpoints.rs  topic_endpoints.rs
topic_service/src/service/: mod.rs  topic.rs
topics/: Cargo.toml
topics-app/: Cargo.toml
topics-app/src/: main.rs
topics-app/tests/: mod.rs  topic_tests.rs
topics-app/tests/mongo/: migration.rs  mod.rs  tests.rs  topic_tests.rs
topics-app/tests/resources/: docker-compose.yml
topics-app/tests/resources/keycloak/: realm-export.json
topics-core/: Cargo.toml
topics-core/src/: lib.rs  list_filter.rs  model.rs  result.rs
topics-routes/: Cargo.toml
topics-routes/src/: error.rs  lib.rs  metrics.rs  model.rs  service.rs  state.rs
topics-routes/src/routes/: api_doc.rs  mod.rs  requests.rs  responses.rs
topics-routes/tests/: integration_tests.rs
topics/topics-core/: Cargo.toml
topics/topics-core/src/: lib.rs  list_filter.rs  result.rs
topics/topics-routes/: Cargo.toml
topics/topics-routes/src/: auth.rs  error.rs  lib.rs  metrics.rs  roles.rs  service.rs  state.rs
topics/topics-routes/src/routes/: mod.rs  requests.rs  responses.rs
topics_app_pg/: Cargo.toml
topics_app_pg/src/: main.rs
