[workspace]
members = [ "postgres-repository", "repository","topic_service"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["v7"] }
axum = { version = "0.8.4", features = ["query", "macros"] }
serde = "1.0.219"
serde_json = "1.0.142"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
error_set = "0.8.5"
error-stack = "0.5.0"
const_format = "0.2.34"
thiserror = "2.0.16"
