[workspace]
members = ["engine", "postgres_repository","topic_routes", "topics_app_pg"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["v7"] }
axum = { version = "0.8.4", features = ["query", "macros"] }
serde = "1.0.219"
serde_json = "1.0.142"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
error-stack = "0.6.0"
const_format = "0.2.34"
thiserror = "2.0.16"
itertools = "0.14.0"
axum-extra = "0.10.1"
utoipa = "5.4.0"
chrono = "0.4.42"
optional-field = "0.1.6"
tokio-stream = "0.1.17"
