[package]
name = "diff_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
error_set = { workspace = true }
error-stack = { workspace = true }
topic_core = { path = "../topic_core" }
