[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
utoipa = { workspace = true, features = ["uuid"] }
const_format = { workspace = true }
uuid = { workspace = true, features = ["serde"]}

[dev-dependencies]
mockall = "0.13.1"
