[package]
name = "postgres_repository"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }
serde_json = { workspace = true }
tokio-postgres = { version = "0.7.14", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
refinery = { version = "0.8.16", features = ["tokio-postgres"] }
optional-field = { workspace = true }
