[package]
name = "set-service"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
tokio = { workspace = true, version = "1.0.0", features = ["fs"] }
axum = { workspace = true }
#uuid = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
const_format = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "uuid"] }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
axum-streams = { workspace = true }
tokio-stream = { workspace = true }
itertools = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true}
optional-field = { workspace = true }
tower-http = { workspace = true}
tower = { workspace = true}
mongodb = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
axum-test = "18.1.0"
futures = "0.3.31"
mockall = "0.13.1"
rstest = "0.26.1"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
