[package]
name = "topic_routes"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
tokio = { workspace = true, version = "1.0.0", features = ["fs"] }
axum = { workspace = true }
#uuid = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
const_format = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
axum-streams = { version = "0.23.1", features = ["json"] }
tokio-stream = "0.1.17"
itertools = { workspace = true }
axum-extra = { workspace = true, features = ["query"]}
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
axum-test = "18.1.0"
futures = "0.3.31"
mockall = "0.13.1"
