[package]
name = "topics-app"
version = "0.1.0"
edition = "2024"

[dependencies]
repositories = { path = "../repositories" }
topics-routes = { path = "../topics/topics-routes" }
topics-core = { path = "../topics/topics-core" }
apps = { path = "../common/apps" }
dotenv = "0.15.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
axum = { version = "0.8.7", features = ["query", "macros"] }
error-stack = "0.6.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

# [features]
# default = ["mongo-topic-repo"]
# mongo-topic-repo = ["dep:repositories", "repositories/mongo-topics"]

[dev-dependencies]
axum-test = "18.1.0"
futures = "0.3.31"
mockall = "0.13.1"
rstest = "0.26.1"
testcontainers-modules = { version = "0.13.0", features = ["mongo"] }
# mongodb = { workspace = true }
# chrono = { workspace = true }
# serde = { workspace = true, features = ["derive"] }
# serde_json = { workspace = true }
bson = { version = "2.15.0", features = ["chrono-0_4"]}
