[package]
name = "topics-app"
version = "0.1.0"
edition = "2024"

[dependencies]
repositories = { path = "../repositories" }
topics-routes = { path = "../topics/topics-routes" }
topics-core = { path = "../topics/topics-core" }
routing = { path = "../common/routing" }
apps = { path = "../common/apps" }
dotenv = "0.15.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
axum = { version = "0.8.7", features = ["query", "macros"] }
error-stack = "0.6.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

# [features]
# default = ["mongo-topic-repo"]
# mongo-topic-repo = ["dep:repositories", "repositories/mongo-topics"]

[dev-dependencies]
axum-test = "18.1.0"
futures = "0.3.31"
mockall = "0.13.1"
reqwest = { version = "0.12.26" }
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
testcontainers = { version = "0.26.2", features = ["blocking", "docker-compose"] }
testcontainers-modules = { version = "0.14.0", features = ["postgres"] }
# chrono = { workspace = true }
# serde_json = { workspace = true }
