[package]
name = "topics-routes"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
topics-core = { path = "../topics-core" }
tokio = { workspace = true, features = ["fs"] }
tokio-stream = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, features = ["axum_extras", "uuid"] }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
chrono = { workspace = true}
optional-field = { workspace = true }
mongodb = { workspace = true }
tracing-subscriber = { workspace = true }
bson = { version = "2.15.0", features = ["chrono-0_4", "serde_with"] }
serde_with = { version = "3.15.0", features = ["chrono_0_4"] }

[dev-dependencies]
axum-test = "18.1.0"
futures = "0.3.31"
mockall = "0.13.1"
rstest = "0.26.1"
testcontainers-modules = { version = "0.13.0", features = ["mongo"] }
