[package]
name = "topics-routes"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
topics-core = { path = "../topics-core" }
tokio = { workspace = true, features = ["fs"] }
axum = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "uuid"] }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
optional-field = { workspace = true }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
